modal change and markup

--- a/index.html
+++ b/index.html
@@ -300,12 +300,12 @@
 
 <div id="test-popup2" class="white-popup mfp-with-anim mfp-hide popup">
     <div class="modal__body">
-		<h4>ДЛЯ ТОГО, ЧТОБЫ ПОДКЛЮЧИТЬ ТАРИФ, ЗАПОЛНИТЕ ПОЛЯ</h4>
+		<h4>Оставьте Ваш номер телефона, и мы Вам перезвоним.</h4>
 		<label for="form_name">Ваше имя:</label>
 		<input type="text" id="form_name2">
 		<label for="form_phone">Контактный номер:</label>
 		<input type="text" id="form_phone2">
-		<a href="#" class="modal__button">Оставить заявку</a>
+		<a href="#" class="modal__button">Заказать</a>
 	</div>
 </div>
 
